CB-9849 GCP : For FreeIPA use the GCP shared project id to query the networks
1. If a user gives a shared project id and a vpc in it, then the reverse DNS zone calculations in FreeIPA is not done correctly.
2. To fix this we need to look at the network and subnet in the shared project.
3. This is fixed everywhere except at one place here.
4. The ultimate issue will be that DH can not talk to IDBroker, it will receive 401 due to lack of reverse DNS.
5. CB-9180 will take care of bailing out if we can not calculate reverse DNS zones.

./gradlew build